# latte

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  extension.toml
languages/frappe-python/: config.toml
snippets/: gitignore.json  javascript.json  jinja.json  python.json
src/: frappe_utils.rs  lib.rs  process_manager.rs  test_runner.rs
templates/: doctype_template.json
